Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjUndefinedRetInteger.quorum
class Main
    action Main
        Yoda<Integer, Integer, undefined> yoda
        undefined y = yoda:useForce(66, 66)
        output "passed"
     end
end
