Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriUndefinedRetIntegerFail.quorum
class Main
    action Main
        Yoda<Integer, Integer, undefined> yoda
        boolean y = yoda(66, 66, true)
     end
end
